--- a/loancalculator/src/main/res/values/strings.xml
+++ b/loancalculator/src/main/res/values/strings.xml
@@ -14,5 +14,22 @@
   -->
 
 <resources>
-    <string name="app_name">LoanCalculator</string>
+    <string name="app_name">Loan Calculator</string>
+    <string name="splash">Splash</string>
+    <string name="loan_amount">Loan Amount</string>
+    <string name="down_payment">Down Payment</string>
+    <string name="term">Term</string>
+    <string name="year">year(s)</string>
+    <string name="annual_interest_rate">Annual Interest Rate</string>
+    <string name="sys_percent">%</string>
+    <string name="monthly_repayment">Month Repayment</string>
+    <string name="total_repayment">Total Repayment</string>
+    <string name="total_interest">Total Interest</string>
+    <string name="average_monthly_interest">Average Monthly Interest</string>
+    <string name="sym_double_column"> : </string>
+    <string name="default_result">0.00</string>
+    <string name="calculate">Calculate</string>
+    <string name="reset">Reset</string>
+    <string name="fixed_interest_rate">Fixed Interest Rate</string>
+
 </resources>
